@startuml
namespace Timer{
class TimerEvent {
    isInvoked : bool = false
    Update() : void
}
MonoBehaviour <|-- TimerEvent
TimerEvent o-> "OnTimeOver" UnityEvent
TimerEvent --> "timer" Timer
class Timer {
    + StartTime : int <<get>>
    + Time : float <<get>>
    + IsTimeOver : bool <<get>>
    OnEnable() : void
    + Update() : void
    + Reset() : void
}
ScriptableObject <|-- Timer
Timer --> "gameSetting" GameSetting
}
@enduml
